# Circle-Packings

./: .gitignore  Apollonian Circle Packings.ipynb  Presentation.nb  a bitch is learning graphs.nb  fractaldimension.ipynb  put_together.nb  root_tuple.nb  scratchpad.nb
fractal_dimension/bai_finch_rust/: Cargo.toml
fractal_dimension/bai_finch_rust/src/: diff.rs  integation.rs  integration.rs  main.rs
fractal_dimension/circle_counting_new/: 6v6f1.txt  Cargo.toml  collect_data.py  cube.txt  dimension.csv  dodecahedron.txt  driver.sh  heptagonal_pyramid.txt  hexagonal_prism.txt  instructions.md  nonagonal_pyramid.txt  octagonal_pyramid.txt  octahedron.txt  pentagonal_prism.txt  pentagonal_pyramid.txt  rhombic_dodecahedron.txt  square_trapezohedron.txt
fractal_dimension/circle_counting_new/data/: 6v6f1.txt  6v7f1.txt  cube.txt  cuboctohedron.txt  decagonal_prism.txt  decagonal_pyramid.txt  decagonal_trapezohedron.txt  dodecahedron.txt  heptagonal_prism.txt  heptagonal_pyramid.txt  heptagonal_trapezohedron.txt  hexagonal_pyramid.txt  hexagonal_trapezohedron.txt  icosahedron.txt  infinite_anti_cupola.txt  infinite_prism.txt  infinite_trapezohedron.txt  nonagonal_prism.txt  nonagonal_pyramid.txt  nonagonal_trapezohedron.txt  octagonal_prism.txt  octagonal_pyramid.txt  octagonal_trapezohedron.txt  octahedron.txt  pentagonal_pyramid.txt  pentagonal_trapezohedron.txt  rhombic_triacontahedron.txt  square_pyramid.txt  square_triangle.txt  tetrahedron.txt  triangular_prism.txt  truncated_icosahedron.txt
fractal_dimension/circle_counting_new/src/: command_args.rs  constants.rs  (+10 more)
(+444 files in other folders)
