[package]
name = "bai_finch"
version = "0.1.0"
authors = ["William Ball <wball1@swarthmore.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3.1"
nalgebra = "0.27.1"
num-complex = "0.3.1"
rayon = "1.5.1"

[profile.release]
debug = true
