[package]
name = "circle_counting"
version = "0.1.0"
authors = [ "William Ball <wball1@swarthmore.edu> "]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "*"
structopt = "*"
ansi_term = "*"
linregress = "*"
nom = "*"
